--- a/app/WEB-INF/web.xml
+++ b/app/WEB-INF/web.xml
@@ -6,22 +6,22 @@
     
   <init-param>  
     <param-name>host-ip</param-name>  
-    <param-value>host-ip:1433</param-value>  
+    <param-value>host-ip-value:1433</param-value>  
   </init-param>
 
   <init-param>  
     <param-name>dbname</param-name>  
-    <param-value>dbname</param-value>  
+    <param-value>dbname-value</param-value>  
   </init-param> 
 
   <init-param>  
     <param-name>user</param-name>  
-    <param-value>user</param-value>  
+    <param-value>user-value</param-value>  
   </init-param> 
 
   <init-param>  
     <param-name>password</param-name>  
-    <param-value>password</param-value>  
+    <param-value>password-value</param-value>  
   </init-param> 
 </servlet> 
 
@@ -31,22 +31,22 @@
     
   <init-param>  
     <param-name>host-ip</param-name>  
-    <param-value>host-ip:1433</param-value>  
+    <param-value>host-ip-value:1433</param-value>  
   </init-param>
 
   <init-param>  
     <param-name>dbname</param-name>  
-    <param-value>dbname</param-value>  
+    <param-value>dbname-value</param-value>  
   </init-param> 
 
   <init-param>  
     <param-name>user</param-name>  
-    <param-value>user</param-value>  
+    <param-value>user-value</param-value>  
   </init-param> 
 
   <init-param>  
     <param-name>password</param-name>  
-    <param-value>password</param-value>  
+    <param-value>password-value</param-value>  
   </init-param> 
 </servlet> 
   
