Add fix to ansible

--- a/ansible_haproxy/done_haproxy.yml
+++ b/ansible_haproxy/done_haproxy.yml
@@ -3,6 +3,9 @@
   become: yes
   become_method: sudo
   remote_user: ubuntu
+  module_defaults:
+    apt:
+      force_apt_get: yes
 
   tasks:
   - name: Update and upgrade apt packages
