--- a/ansible_haproxy/done_haproxy.yml
+++ b/ansible_haproxy/done_haproxy.yml
@@ -5,7 +5,7 @@
   remote_user: ubuntu
 
   tasks:
-  - name: "APT: Install aptitude package"
+  - name: Install aptitude package
     apt:
       name: aptitude
       force_apt_get: yes
@@ -23,16 +23,11 @@
       state: present
       force_apt_get: yes
 
-  - name: git clone
-    command: git clone https://github.com/Vetal-V/java-app-team5.git
-
-
-  - name: enter to cloned directory path
-    command: chdir=java-app-team5 ls
-    command: mv java-app-team5/haproxy.cfg  /etc/haproxy/haproxy.cfg
+  - name: Copy haproxy.cfg
+    copy:
+      src: ./haproxy.cfg
+      dest: /etc/haproxy/haproxy.cfg
+      mode: 0644
 
   - name: restart haproxy
     command: sudo service haproxy restart
-
-  - name: delete repository
-    command: sudo rm -r -f java-app-team5/
