Change copy way of haproxy.cfg

--- a/ansible_haproxy/done_haproxy.yml
+++ b/ansible_haproxy/done_haproxy.yml
@@ -27,6 +27,8 @@
     copy:
       src: ./haproxy.cfg
       dest: /etc/haproxy/haproxy.cfg
+      owner: tomcat
+      group: tomcat
       mode: 0644
 
   - name: restart haproxy
