--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -53,6 +53,7 @@ backend backendnodes
 
 listen stats
     bind :32700 #statistic by 0.0.0.0:32700
+    mode http
     stats enable
     stats uri /
     stats hide-version
