Change copy way of haproxy.cfg

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -51,10 +51,10 @@ backend backendnodes
     server node1 192.168.1.3:8080 check #change on ip of vm1
     server node2 192.168.1.4:8080 check #change on ip of vm2
 
-listen stats
-    bind :32700 #statistic by 0.0.0.0:32700
+listen stats :1936
     mode http
     stats enable
-    stats uri /
     stats hide-version
-    stats auth someuser:password
+    stats realm Haproxy\ Statistics
+    stats uri /
+    stats auth Username:Password
