--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -51,7 +51,8 @@ backend backendnodes
     server node1 192.168.1.3:8080 check #change on ip of vm1
     server node2 192.168.1.4:8080 check #change on ip of vm2
 
-listen stats :1936
+listen stats
+    bind *:9000
     mode http
     stats enable
     stats hide-version
