Change copy way of haproxy.cfg

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -51,11 +51,10 @@ backend backendnodes
     server node1 192.168.1.3:8080 check #change on ip of vm1
     server node2 192.168.1.4:8080 check #change on ip of vm2
 
-listen stats
-    bind *:9000
-    mode http
+listen stats *:9000
     stats enable
     stats hide-version
-    stats realm Haproxy\ Statistics
-    stats uri /
-    stats auth Username:Password
+    stats refresh 30s
+    stats show-node
+    stats auth username:password
+    stats uri  /stats
