--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -1,61 +1,48 @@
 global
-    log /dev/log    local0
-    log /dev/log    local1 notice
+    log /dev/log daemon
+    maxconn 32768
     chroot /var/lib/haproxy
-    stats socket /run/haproxy/admin.sock mode 660 level admin
-    stats timeout 30s
     user haproxy
     group haproxy
     daemon
-
-    # Default SSL material locations
-    ca-base /etc/ssl/certs #logs about errors contains there
-    crt-base /etc/ssl/private #and there
-
-    # Default ciphers to use on SSL-enabled listening sockets.
-    # For more information, see ciphers(1SSL). This list is from:
-    #  https://hynek.me/articles/hardening-your-web-servers-ssl-ciphers/
-    # An alternative list with additional directives can be obtained from
-    #  https://mozilla.github.io/server-side-tls/ssl-config-generator/?server=haproxy
-    ssl-default-bind-ciphers ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:RSA+AESGCM:RSA+AES:!aNULL:!MD5:!DSS
-    ssl-default-bind-options no-sslv3
+    stats socket /var/lib/haproxy/stats user haproxy group haproxy mode 0640 level operator
+    tune.bufsize 32768
+    tune.ssl.default-dh-param 2048
+    ssl-default-bind-ciphers ALL:!aNULL:!eNULL:!EXPORT:!DES:!3DES:!MD5:!PSK:!RC4:!ADH:!LOW@STRENGTH
 
 defaults
     log     global
     mode    http
-    option  httplog
+    option  log-health-checks
+    option  log-separate-errors
+    option  dontlog-normal
     option  dontlognull
-    option log-separate-errors #changed to have all errors in one file 
-    timeout connect 5000
-    timeout client  50000
-    timeout server  50000
-    errorfile 400 /etc/haproxy/errors/400.http
-    errorfile 403 /etc/haproxy/errors/403.http
-    errorfile 408 /etc/haproxy/errors/408.http
-    errorfile 500 /etc/haproxy/errors/500.http
-    errorfile 502 /etc/haproxy/errors/502.http
-    errorfile 503 /etc/haproxy/errors/503.http
-    errorfile 504 /etc/haproxy/errors/504.http
-
-frontend haproxynode
-    bind *:80 #equal bind 0.0.0.0:80
-    mode http
-    default_backend backendnodes
-
-backend backendnodes
-    balance roundrobin #strategy
-    option forwardfor
-    http-request set-header X-Forwarded-Port %[dst_port]
-    http-request add-header X-Forwarded-Proto https if { ssl_fc }
-    option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-    server node1 192.168.1.3:8080 check #change on ip of vm1
-    server node2 192.168.1.4:8080 check #change on ip of vm2
+    option  httplog
+    option  socket-stats
+    retries 3
+    option  redispatch
+    maxconn 10000
+    timeout connect     5s
+    timeout client     50s
+    timeout server    450s
 
 listen stats
     bind *:9000
+    mode http
     stats enable
-    stats hide-version
-    stats refresh 30s
+    stats hide-version   #Hide HAProxy version
     stats show-node
-    stats auth username:password
-    stats uri  /stats
+    stats uri /stats   #Stats URI
+    stats auth admin:haproxy   #Authentication credentials
+    stats refresh 5s
+
+frontend tomcat-service
+    bind *:80
+    acl dalanzg_uri path_beg /app
+    use_backend tomcat-server if dalanzg_uri  #Balance if URI
+    default_backend tomcat-server   #Balance by default
+
+backend tomcat-server
+    balance roundrobin
+    server tomcat1 192.168.1.3:8080 check
+    server tomcat2 192.168.1.4:8080 check
